<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">



    <TextView
        android:id="@+id/headTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/addSchoolCoordinator"
        android:layout_alignParentEnd="true"
        android:textSize="60px"
        android:textStyle="bold"
        android:gravity="center"/>
    <EditText
        android:id="@+id/textHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:layout_below="@+id/headTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/textLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lastName"
        android:layout_below="@+id/textHours"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/email"
        android:layout_below="@+id/textLastName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/textCollege"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/college"
        android:layout_below="@+id/textEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="4.0dip"
        android:paddingTop="5.0dip"
        android:paddingRight="4.0dip"
        android:paddingBottom="1.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/textCollege"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/addSchoolCoordinatorButton"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/confirm"
            android:layout_weight="1.0" />

        <Button
            android:id="@+id/cancelAddCoordinatorButton"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/cancel"
            android:layout_weight="1.0" />

    </LinearLayout>

</RelativeLayout>