<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/background_blank_no_logo" />

    <TextView
        android:id="@+id/headTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/setNewPinTitle"
        android:textSize="60px"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/securityAnswerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:editable="false"
        android:layout_marginTop="79dp"
        android:layout_below="@+id/headTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/securityQuestionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/securityAnswer2"
        android:inputType="textPersonName"
        android:layout_below="@+id/textLeaderEmail"
        android:layout_alignParentStart="true"
        android:layout_marginTop="53dp"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="17dp"
        android:orientation="horizontal"
        android:paddingBottom="1.0dip"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip">

        <Button
            android:id="@+id/changePinButton"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:backgroundTint="@color/colorPrimaryDark"
            android:paddingStart="5.0dp"
            android:text="@string/confirm"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/cancelChangePinButton"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_weight="1.0"
            android:backgroundTint="@color/colorAccent"
            android:paddingEnd="5.0dp"
            android:text="@string/cancel"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
